--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testNoChange_assets",
+  "name": "template-phaser-typescript-ic",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
   "keywords": [
@@ -15,22 +15,35 @@
     "prestart": "npm run copy:types",
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --delete src/declarations"
   },
+  "dependencies": {
+    "phaser": "^3.55.2"
+  },
   "devDependencies": {
     "@dfinity/agent": "0.9.2",
     "@dfinity/candid": "0.9.2",
     "@dfinity/principal": "0.9.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^9.0.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "events": "3.3.0",
     "html-webpack-plugin": "5.3.1",
+    "prettier": "^2.3.2",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
     "terser-webpack-plugin": "5.1.1",
+    "ts-loader": "^9.2.4",
+    "typescript": "^4.3.5",
     "util": "0.12.3",
+    "webpack": "5.24.4",
     "webpack-cli": "4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack": "5.24.4"
+    "webpack-dev-server": "^3.11.2"
   },
   "browserslist": [
     "last 2 chrome version",
